--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,19 @@
             </intent-filter>
         </activity>
 
-        <service android:label="@string/app_name"
+        <service
             android:name=".NotificationReceiver"
-            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" >
             <intent-filter>
-                <action android:name="android.service.notification.NotificationListenerService"/>
+                <action android:name="android.service.notification.NotificationListenerService" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name=".AllAppsActivity"
+            android:label="@string/title_activity_all_apps" >
+        </activity>
     </application>
 
 </manifest>
